--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: #212121;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer components {
+  .ticket-dash-border {
+    background-image: linear-gradient(
+      hsla(0, 0%, 100%, 0.2) 0%,
+      hsla(0, 0%, 100%, 0.2) 50%,
+      transparent 50%
+    );
+    background-size: 0.0625rem 1.125rem;
+    background-position: 100% 0;
+    background-repeat: repeat-y;
+  }
+
+  .ticket-dash-border-top {
+    background-image: linear-gradient(
+      to right,
+      hsla(0, 0%, 100%, 0.2) 0%,
+      hsla(0, 0%, 100%, 0.2) 50%,
+      transparent 50%
+    );
+    background-size: 1.125rem 0.0625rem;
+    background-position: 0 0;
+    background-repeat: repeat-x;
+  }
 }
