--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,6 +64,70 @@ body {
   }
 }
 
+@layer components {
+  .ticket-premium-bg {
+    position: relative;
+    background-image: url(/background.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 1;
+    overflow: hidden;
+  }
+
+  .ticket-premium-bg::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background: linear-gradient(to left bottom, #a172f750 0%, #a172f700 100%),
+      linear-gradient(to right top, #5bc4f450 0%, #a172f700 0%);
+    opacity: 0.5;
+    animation: animateGradientPremium 10s infinite alternate linear;
+  }
+
+  .ticket-premium-bg::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    background: url(/img/tickets-effect/noise.png);
+    background-size: 50px 50px;
+    opacity: 0.8;
+  }
+
+  @keyframes animateGradientPremium {
+    0% {
+      opacity: 0.5;
+    }
+
+    25% {
+      opacity: 0.7;
+    }
+
+    50% {
+      opacity: 0.9;
+    }
+
+    75% {
+      opacity: 0.7;
+    }
+
+    100% {
+      opacity: 0.5;
+    }
+  }
+}
+
+@layer components {
+  .flavors-gradient-list {
+    mask: linear-gradient(to top, transparent, black 4rem);
+    -webkit-mask: linear-gradient(to top, transparent, black 4rem);
+  }
+}
+
 /* Estilos generales para la imagen */
 img {
   width: 100%;
