add: implement gallery component and enhance ticket section with icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,3 +160,12 @@ img {
     width: 150%; /* Ajusta este valor según tus necesidades */
   }
 }
+
+.gallery {
+  max-width: 900px;
+  margin: 0 auto;
+  padding-bottom: 3rem;
+}
+.gallery__item img {
+  width: 100%;
+}
